--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,35 +1,37 @@
-.container {
+.game-container {
   margin: auto;
   width: 60vw;
+  min-width: 300px;
   background-color: white;
   display: grid;
-  grid-template-columns: repeat(autofill, minmax(250px, 1fr));
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
 }
 body {
   background-color: lightblue;
 }
 .game-image {
-  grid-column: 1;
+  margin: 0px auto;
+  padding: 10px;
 }
 .game-descriptions {
-  grid-column: 2;
+  padding: 10px;
+  grid-auto-columns: minmax(10px, auto);
   display: grid;
   grid-template-rows: repeat(autofill, minmax(50px, 1fr));
   min-height: 360px;
   padding-left: 10px;
 }
-.game-name {
-  grid-row: 1;
-}
-.game-genres {
-  grid-row: 2;
-}
-.game-platforms {
-  grid-row: 3;
-}
-.game-summary {
-  grid-row: 4;
-}
 h3 {
   margin: 0px auto;
+}
+@media (min-width: 1235px) {
+  .game-descriptions {
+    grid-column: span 2;
+  }
+}
+@media (min-width: 1650px) {
+  .game-descriptions {
+    grid-column: span 3;
+  }
 }
