--- a/src/components/Home/GameItem/GameItem.css
+++ b/src/components/Home/GameItem/GameItem.css
@@ -3,12 +3,6 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-gap: 10px;
   max-width: 60vw;
-}
-.game-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  max-width: 100vw;
-  box-sizing: border-box;
+  min-width: 300px;
+  justify-items: center;
 }
