--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -19,11 +19,25 @@ body {
   grid-auto-columns: minmax(10px, auto);
   display: grid;
   grid-template-rows: repeat(autofill, minmax(50px, 1fr));
+  grid-template-columns: 1fr 1fr;
   min-height: 360px;
   padding-left: 10px;
 }
 h3 {
   margin: 0px auto;
+}
+.game-name,
+.game-genres,
+.game-platforms,
+.game-summary {
+  grid-column: span 2;
+}
+.game-add-button {
+  grid-column: 2;
+  justify-self: end;
+  align-self: center;
+  width: 80px;
+  height: 30px;
 }
 @media (min-width: 1235px) {
   .game-descriptions {
